feat: add Advanced Query Engine
